--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiktok email parser",
+  "name": "tiktok-email-parser",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
